--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/webapp/WEB-INF/messages.properties=UTF-8
+encoding//src/main/webapp/WEB-INF/messages_en.properties=UTF-8
+encoding//src/main/webapp/WEB-INF/messages_pt.properties=UTF-8
 encoding/<project>=UTF-8
